test/compile_errors/err_effect_unknown_param.w
//! expect-check-fail: @[effect] names unknown parameter 'q'

@[effect(q: read)]
fn f(p: i32) -> i32:
    p

fn main:
    let _ = f(1)
